--- a/src/assets/style/base.less
+++ b/src/assets/style/base.less
@@ -6,10 +6,85 @@
 @mainColor: #094;
 @subColor: #9fd25b;
 @Color: #03442f;
+@menuHeight: 100px;
 
-.x-wrapper{
+.x-wrapper {
   width: 100vw;
   height: 100vh;
   overflow: hidden auto;
-  background: lightblue;
+}
+.x-header {
+  position: fixed !important;
+  z-index: 2;
+  width: 100%;
+  height: @menuHeight;
+  border-top: 6px solid @mainColor;
+  box-shadow: 0 0 10px #a7a7a7;
+  background: #ffffff;
+  .el-menu {
+    max-width: 1200px;
+    height: calc(@menuHeight - 6px);
+    margin: 0 auto;
+    border-bottom: 0 !important;
+    .x-header-logo {
+      padding: 0 20px;
+      img {
+        height: 100%;
+        cursor: pointer;
+      }
+    }
+    .el-menu-item {
+      font-size: 16px;
+    }
+  }
+}
+.x-footer {
+  background: @mainColor;
+  padding-top: 50px;
+  padding-bottom: 20px;
+  .x-footer-top {
+    width: 840px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    .x-footer-nav {
+      display: flex;
+      flex-wrap: wrap;
+      width: 480px;
+      &-item {
+        width: 33%;
+        margin-bottom: 20px;
+        color: #ffffff;
+        cursor: pointer;
+      }
+    }
+    .x-footer-qrcode img {
+      height: 96px;
+    }
+  }
+  .x-footer-icp {
+    width: 840px;
+    margin: 0 auto;
+    text-align: center;
+    color: @textColor3;
+    padding-top: 20px;
+    border-top: 1px solid @textColor3;
+    margin-top: 20px;
+  }
+}
+.x-main {
+  margin-top: @menuHeight;
+  min-height: calc(100vh - @menuHeight - 231px);
+}
+.x-artical {
+  max-width: 1200px;
+  padding: 20px;
+  margin: 0 auto;
+  &-title {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 32px;
+    font-weight: bold;
+    color: @textColorMain;
+  }
 }
