--- a/src/assets/style/base.less
+++ b/src/assets/style/base.less
@@ -2,7 +2,7 @@
 @color: #00ff00;
 @textColorMain: #222222;
 @textColorSub: #666666;
-@textColor3: #f5f5f5;
+@textColor3: #999999;
 @mainColor: #094;
 @subColor: #9fd25b;
 @Color: #03442f;
@@ -86,5 +86,30 @@
     margin-bottom: 32px;
     font-weight: bold;
     color: @textColorMain;
+  }
+  &-list {
+    &-item {
+      margin-top: 20px;
+      padding: 20px 0;
+      border-top: 1px solid @textColor3;
+      cursor: pointer;
+      position: relative;
+      &-title {
+        font-size: 18px;
+        font-weight: 600;
+        color: @mainColor;
+      }
+      &-time {
+        position: absolute;
+        top: 30px;
+        right: 0px;
+        color: @textColor3;
+        font-size: 12px;
+      }
+      &-desc {
+        margin-top: 5px;
+        color: @textColorSub;
+      }
+    }
   }
 }
